// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/IntelligentSpeedAssistanceNotice EligibleNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="dangerous-vehicle-notice list-group-item list-group-item-primary new-style"
                    data-testid="stop-super-speeders-notice"
                >
                  <p>
                    Under bills proposed by
                    <a href="https://nyassembly.gov/mem/Emily-Gallagher"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      Assembly Member Gallagher
                    </a>
                    &nbsp;and
                    <a href="https://www.nysenate.gov/senators/andrew-gounardes"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      State Senator Gounardes
                    </a>
                    ,&nbsp;
                    <span style="font-weight: bold;">
                      Speed Limiters for the Most Reckless Drivers
                    </span>
                    , this vehicle could be required to have
                    <a href="https://static1.squarespace.com/static/66e9f5934be5cb497f7cfd6c/t/68bf36bee4ed1a6d76a6f552/1757361854806/Super+Speeders+One+Pager+9.25+updated.pdf"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      intelligent speed assistance technology
                    </a>
                    &nbsp;installed for:
                  </p>
                  <ul>
                    <li>
                      <span class="streak-count-and-type text-bg-warning">
                        <span class="streak-count">
                          8
                        </span>
                        red light and speed camera violations
                      </span>
                      <span class="streak-threshold">
                        &nbsp;(&gt;= 6/year)
                      </span>
                      <span>
                        &nbsp;from 10/24/2023 to 10/12/2024
                      </span>
                    </li>
                  </ul>
                  <p>
                    Click
                    <a href="https://act.transalt.org/a/intelligent-speed-assistance"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      <span style="font-weight: bold;">
                        here
                      </span>
                    </a>
                    &nbsp;to support this legislation
                    <a href="https://www.nysenate.gov/legislation/bills/2025/A2299/amendment/B"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      [Assembly]
                    </a>
                    <a href="https://www.nysenate.gov/legislation/bills/2025/S4045/amendment/A"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      [Senate]
                    </a>
                    .
                  </p>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/IntelligentSpeedAssistanceNotice EligibleOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container">
          <div class="vehicles">
            <div class="vehicle card">
              <ul class="list-group-flush list-group">
                <li class="dangerous-vehicle-notice list-group-item list-group-item-primary "
                    data-testid="stop-super-speeders-notice"
                >
                  <p>
                    Under bills proposed by
                    <a href="https://nyassembly.gov/mem/Emily-Gallagher"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      Assembly Member Gallagher
                    </a>
                    &nbsp;and
                    <a href="https://www.nysenate.gov/senators/andrew-gounardes"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      State Senator Gounardes
                    </a>
                    ,&nbsp;
                    <span style="font-weight: bold;">
                      Speed Limiters for the Most Reckless Drivers
                    </span>
                    , this vehicle could be required to have
                    <a href="https://static1.squarespace.com/static/66e9f5934be5cb497f7cfd6c/t/68bf36bee4ed1a6d76a6f552/1757361854806/Super+Speeders+One+Pager+9.25+updated.pdf"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      intelligent speed assistance technology
                    </a>
                    &nbsp;installed for:
                  </p>
                  <ul>
                    <li>
                      <span class="streak-count-and-type text-bg-warning">
                        <span class="streak-count">
                          8
                        </span>
                        red light and speed camera violations
                      </span>
                      <span class="streak-threshold">
                        &nbsp;(&gt;= 6/year)
                      </span>
                      <span>
                        &nbsp;from 10/24/2023 to 10/12/2024
                      </span>
                    </li>
                  </ul>
                  <p>
                    Click
                    <a href="https://act.transalt.org/a/intelligent-speed-assistance"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      <span style="font-weight: bold;">
                        here
                      </span>
                    </a>
                    &nbsp;to support this legislation
                    <a href="https://www.nysenate.gov/legislation/bills/2025/A2299/amendment/B"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      [Assembly]
                    </a>
                    <a href="https://www.nysenate.gov/legislation/bills/2025/S4045/amendment/A"
                       rel="noopener noreferrer"
                       target="_blank"
                    >
                      [Senate]
                    </a>
                    .
                  </p>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
